fix: [PL-20037]: fix input overflow (#5367)

--- a/src/modules/40-gitsync/pages/repos/GitSyncRepoTab.module.scss
+++ b/src/modules/40-gitsync/pages/repos/GitSyncRepoTab.module.scss
@@ -60,7 +60,7 @@
 }
 
 .inputFields {
-  width: 20vw;
+  width: 100%;
 }
 
 .defaultFolderTag {
